# dataquality

./: .gitignore  BUGFIX_SUMMARY.md  DELIVERY_SUMMARY.md  DROPDOWN_FIX.md  EXCEL_LIMITATIONS.md  FINAL_STATUS.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  SIMPLIFICATION_ANALYSIS.md  USAGE_DEBUG.md  WORKFLOW.md  __init__.py  debug_check.py  example_usage.py  main.py  pyproject.toml  quick_debug.py  requirements.txt  setup.py  verify_dropdown_preservation.py
checks/: __init__.py
core/: processor.py
data/: README.md
sql/: add_berichtsjahr_column.sql  add_geschaeft_nr_column.sql  create_table_orsa_analysis_data.sql  institut_metadata.sql  source_orsa_dokument_metadata.sql  update_views_for_berichtsjahr.sql  update_views_with_geschaeft_nr.sql
src/orsa_analysis/: __init__.py  __main__.py  cli.py
src/orsa_analysis/checks/: rules.py  sheet_mapper.py
src/orsa_analysis/core/: __init__.py  database_manager.py  db.py  orchestrator.py  processor.py  reader.py  versioning.py
src/orsa_analysis/reporting/: __init__.py  check_mapper.py  check_to_cell_mapper.py  excel_template_manager.py  report_generator.py  sharepoint_uploader.py  template_manager.py
src/orsa_analysis/sourcing/: __init__.py  document_sourcer.py
tests/: __init__.py  test_check_mapper.py  test_check_to_cell_mapper.py  test_db.py  test_document_sourcer.py  test_excel_template_manager.py  test_orchestrator.py  test_processor.py  test_reader.py  test_report_generator.py  test_rules.py  test_sharepoint_uploader.py  test_sheet_mapper.py  test_template_manager.py  test_versioning.py
