[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orsa-analysis"
version = "0.1.0"
description = "Data Quality Control System for Excel Files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FINMA Data Quality Team"}
]
keywords = ["data-quality", "excel", "validation", "orsa", "quality-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business",
]

dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "requests-ntlm>=1.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pymssql>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
orsa-qc = "orsa_analysis.cli:main"

[project.urls]
Homepage = "https://github.com/meierpd/dataquality"
Repository = "https://github.com/meierpd/dataquality"
Issues = "https://github.com/meierpd/dataquality/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orsa_analysis = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.pytest_cache
  | __pycache__
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "openpyxl.*",
    "requests_ntlm.*",
    "sqlalchemy.*",
    "pymssql.*",
]
ignore_missing_imports = true
